--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ fastparquet = "^2024.11.0"
 pandas = "^2.2.3"
 scikit-learn = "^1.5.2"
 boto3 = "^1.35.71"
+deltalake = "^0.22.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
